[package]
name = "tilted"
version = "0.1.0"
authors = ["Robin Sonefors <robin@sonefors.net>"]
edition = "2018"
description = "Tool for interacting with a tilt hydrometer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ozamosi/tilted"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
env_logger = "0.8.4"
handlebars = "4.0"
http = "0.2.1"
humantime-serde = "1.0"
libc = "0.2.79"
nom = "6.1"
num-derive = "0.3"
num-traits = "0.2"
prometheus = {version = "0.12", features = ["push"]}
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
toml = "0.5.6"
tracing = "0.1.19"
url = "2.1"
uuid = "0.8.1"
